Wrapping up Jupyter Need

--- a/1.1_using_jupyter/using-jupyter_need.ipynb
+++ b/1.1_using_jupyter/using-jupyter_need.ipynb
@@ -64,7 +64,29 @@
     "| :--- | :--: | ---: |\n",
     "| a1   |  b1  |   c1 |\n",
     "| a2   |  b2  |   c2 |\n",
-    "| a3   |  b3  |   c3 |\n"
+    "| a3   |  b3  |   c3 |\n",
+    "\n",
+    "# Lists \n",
+    "\n",
+    "1. Master Yoda\n",
+    "   1. Was a Jedi\n",
+    "   1. Was a bit green\n",
+    "1. Luke Skywalker\n",
+    "   1. Was a Jedi\n",
+    "   1. Is Anakin's son.\n",
+    "1. Anakin Skywalker\n",
+    "   - Was a Jedi then became a baddie\n",
+    "   - Is famous for saying 'Luke, I am your father'\n",
+    "\n",
+    "# Equations\n",
+    "\n",
+    "$ this is a equation \\sqrt{b^2-4ac}$\n",
+    "\n",
+    "$$\n",
+    "x = \\dfrac{-b \\pm \\sqrt{b^2-4ac}}{2a}\n",
+    "$$\n",
+    "\n",
+    "$\\alpha, \\beta, \\gamma, \\pi, \\lambda$"
    ]
   },
   {
