--- a/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
@@ -29,7 +29,18 @@
     "5. kernel\n",
     "6. _shell magic_\n",
     "7. _listing_\n",
-    "8. _producing math equations_\n"
+    "8. _producing math equations_\n",
+    "9. function\n",
+    "10. arguments\n",
+    "11. libraries\n",
+    "12. package imports \n",
+    "13. storing data in dictionaries\n",
+    "14. comments are to tell you the purpose of the code\n",
+    "15. interpreter\n",
+    "16. = is to say something is equal == is to check\n",
+    "17. indentations\n",
+    "18. () is for maths, [] is for lists and {} is for dictionaries\n",
+    "19. %%timeit - shows how long it takes for the code to run"
    ]
   },
   {
@@ -82,17 +93,88 @@
     "| 3    |  Comments  | Short inputs to explain the purpose of the code |\n",
     "| 4    |  Indentations  | Spaces that indicate the block of a code |\n",
     "| 5    |  Packages  | It contains modules that perform specific tasks |\n",
-    "| 6    |  .  | It allows you to accesss attributes and methods|\n",
-    "| 7    |  :  | Allows you to pick a section (from here to there) |\n",
+    "| 6    |  .  | It allows you to accesss blocks|\n",
+    "| 7    |  :  | Allows you to pick a block |\n",
     "| 8    |  []  | Is used to list data |\n",
     "| 9    |  [[],[]]  | A list that contains two other lists |\n",
-    "| 10   |  {}  | Stores data that helps you organise and retrieve info |"
+    "| 10   |  {}  | Stores data in a dictionary which stores data in key value pairs |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e14d0f2c-b128-4e2e-8a25-0aaced3fa6cf",
+   "metadata": {},
+   "source": [
+    "# **Exercise 4**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "98d0acd4-3bb6-4ba4-96b5-2defb5734b10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.5"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5/2        # divides 5 by 2 normally and gives the full result with the decimal place (floating number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "71b9091d-37a6-44ea-ba40-825c6cd654bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5//2       # divides 5 by 2 but rounds down to the nearest whole number (floor division)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "aa3663e6-3485-4536-aa98-b265bb485f0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5%2        # divides 5 by 2 and gives the remainder (modulus)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6630b44-672b-4500-9837-a7a74ece3801",
+   "id": "6fbf2c17-59a0-48b6-af1a-3547b4f40ad9",
    "metadata": {},
    "outputs": [],
    "source": []
