--- a/1.1_using_jupyter/using_jupyter_exercises(need).ipynb
+++ b/1.1_using_jupyter/using_jupyter_exercises(need).ipynb
@@ -19,12 +19,13 @@
     "\n",
     "![](https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Polynomialdeg2.svg/300px-Polynomialdeg2.svg.png)\n",
     "\n",
+    "(_Image from the [Wikipedia page on Quadratic equations](https://en.wikipedia.org/wiki/Quadratic_equation)_)\n",
     "\n",
-    "The general form of a quadratic equation is: $${ax^2+bx+c=0}$$\n",
+    "The general form of a quadratic equation is: ${ax^2+bx+c=0}$\n",
     "\n",
     "### **Solutions**\n",
     "\n",
-    "Provided $\\alpha$ $\\ne$ 0 we can use an elementary algebraic method called completing the square to show that a quadratic equation has the following solution:\n",
+    "Provided $\\alpha$ $\\ne$ 0 we can use an elementary algebraic method called [completing the square](https://en.wikipedia.org/wiki/Completing_the_square) to show that a quadratic equation has the following solution:\n",
     "$$\n",
     "x = \\dfrac{-b \\pm \\sqrt{b^2-4ac}}{2a}\n",
     "$$\n",
@@ -32,11 +33,11 @@
     "### **Discriminant**\n",
     "The quantity $\\Delta$ =$b^2-4ac$ is called the **discriminant** of the equation and decides the nature of its solutions. The table below shows the various possibilities.\n",
     "\n",
-    "| **Discriminant**         | **Roots**                          |\n",
-    "|--------------------------|-------------------------------------|\n",
-    "| $\\Delta$=$b^2-4ac=0$      | A single solution of -b/(2a)        |\n",
-    "| $\\Delta$=$b^2-4ac \\gt 0$ | Two distinct solutions              |\n",
-    "| $\\Delta$=$b^2-4ac \\lt 0$| No real solutions; both are complex |\n"
+    "| **Discriminant**          |**Roots**                          |\n",
+    "|:------------------------- |:-----------------------------------|\n",
+    "| $\\Delta$=$b^2-4ac=0$      |A single solution of -b/(2a)        |\n",
+    "| $\\Delta$=$b^2-4ac \\gt 0$  |Two distinct solutions              |\n",
+    "| $\\Delta$=$b^2-4ac \\lt 0$  |No real solutions; both are complex |\n"
    ]
   },
   {
@@ -66,12 +67,20 @@
    "source": [
     "# **Exercise 3**\n",
     "\n",
-    "$\\mu$=$\\frac{1}{n}\\sum\\limits_{i-1}^{n}x_{i}$\n",
+    "$$\\mu=\\frac{1}{n}\\sum\\limits_{i=1}^{n}x_{i}$$\n",
     "\n",
-    "$\\delta$=$\\sqrt{\\frac{1}{n}\\sum\\limits_{i-1}^{n}(x_i-\\mu)^2}$\n",
+    "$$\\sigma=\\sqrt{\\frac{1}{n}\\sum\\limits_{i=1}^{n}(x_i-\\mu)^2}$$\n",
     "\n",
-    "r=$\\dfrac{\\sum_{i=1}^{n}(x_i-\\mu_X)(y_i-\\mu_y)}{\\sqrt{\\sum_{i=1}^{n}}(x_i-\\mu_X)^2\\sum_{i-1}^{n}(y_i-\\mu_Y)^2}$"
+    "$$r=\\dfrac{\\sum_{i=1}^{n}(x_i-\\mu_X)(y_i-\\mu_y)}{\\sqrt{\\sum_{i=1}^{n}(x_i-\\mu_X)^2\\sum_{i=1}^{n}(y_i-\\mu_Y)^2}}$$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfed5bdf-5c6a-4b6a-a6e1-e19795c75459",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
