amended_using_juypyter_exercises(good)_Emma

--- a/1.1_using_jupyter/Using_Jupyter_Exercises(good).ipynb
+++ b/1.1_using_jupyter/Using_Jupyter_Exercises(good).ipynb
@@ -49,8 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d4d27761-e74a-4beb-a492-214026f3fc73",
+   "execution_count": 2,
+   "id": "7c4b6f41-8577-43db-a1f3-c0693155a19a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,15 +59,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "52d18568-cbc8-4f3d-96f4-1c5406a002e3",
+   "execution_count": 3,
+   "id": "2ab5f5e0-ecb2-4006-87c2-8189dde6fdc6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
+     "ename": "TypeError",
+     "evalue": "'str' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mHello World\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'str' object is not callable"
      ]
     }
    ],
@@ -125,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "2412b4c8-41d2-40e3-b62f-5d540efaeb5d",
    "metadata": {},
    "outputs": [
@@ -133,13 +137,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "364 ns ± 7.74 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "361 ns ± 3.07 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit\n",
-    "squares = [i**2 for i in range(10)]\n"
+    "%%timeit  \n",
+    "squares = [i**2 for i in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aadc0d59-02ec-444f-8272-8d461f3ddcf1",
+   "metadata": {},
+   "source": [
+    "It took 361 nanoseconds for the code to run. \n",
+    "The standard deviation (variation) is 3.07 nanoseconds.\n",
+    "The actual time could be 3.07ns more or less than 362ns."
    ]
   },
   {
@@ -157,16 +171,24 @@
     }
    ],
    "source": [
-    "%%timeit\n",
+    "%%timeit \n",
     "squares_loop = list()\n",
     "for i in range(10):\n",
     "    squares_loop.append(i**2)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4a2fc63f-dc12-4fe5-a372-19746d5da982",
+   "metadata": {},
+   "source": [
+    "The code took 388 nanoseconds to run. The variation for running this code is 6.71 nanoseconds. The actual time taken to run the code could be 6.71ns more or less than 388ns."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cb8feb1-90b7-4f5a-bcba-6591ef605168",
+   "id": "43672f50-357c-40e3-9b1c-ee013f7676d7",
    "metadata": {},
    "outputs": [],
    "source": []
