amended_using_jupyter_exercise(good)_emma

--- a/1.1_using_jupyter/Using_Jupyter_Exercises(good).ipynb
+++ b/1.1_using_jupyter/Using_Jupyter_Exercises(good).ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "0aa75abd-b283-44b3-85e5-cece029e60f6",
    "metadata": {},
    "outputs": [
@@ -97,18 +97,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "List comprehension: [0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
      ]
     }
    ],
    "source": [
     "squares = [i**2 for i in range(10)]\n",
-    "print(\"List comprehension:\", squares_comp)\n"
+    "print(squares)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "d944a35c-cad7-48b8-a51d-c2c35187d284",
    "metadata": {},
    "outputs": [
@@ -116,15 +116,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For loop: [0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
      ]
     }
    ],
    "source": [
-    "squares_loop = list()\n",
+    "squares = list()\n",
     "for i in range(10):\n",
-    "    squares_loop.append(i**2)\n",
-    "print(\"For loop:\", squares_loop)"
+    "    squares.append(i**2)\n",
+    "print(squares)"
    ]
   },
   {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "71df749e-bb3c-4301-9e03-0080eeda1aaf",
    "metadata": {},
    "outputs": [
@@ -166,15 +166,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "388 ns ± 6.71 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "400 ns ± 2.65 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit \n",
-    "squares_loop = list()\n",
+    "squares = list()\n",
     "for i in range(10):\n",
-    "    squares_loop.append(i**2)"
+    "    squares.append(i**2)"
    ]
   },
   {
@@ -182,7 +182,7 @@
    "id": "4a2fc63f-dc12-4fe5-a372-19746d5da982",
    "metadata": {},
    "source": [
-    "The code took 388 nanoseconds to run. The variation for running this code is 6.71 nanoseconds. The actual time taken to run the code could be 6.71ns more or less than 388ns."
+    "The code took 400 nanoseconds to run. The variation for running this code is 2.65 nanoseconds. The actual time taken to run the code could be 2.65ns more or less than 388ns."
    ]
   },
   {
